fix(styles): fix whitespace

--- a/client/src/components/layouts/global.css
+++ b/client/src/components/layouts/global.css
@@ -462,7 +462,7 @@ code {
 }
 
 .challenge-instructions code {
-  color: blue;
+  white-space: break-spaces;
 }
 
 .panel {
